Revision history for Perl extension Starch-Store-CHI.

{{$NEXT}}

 - Require perl 5.8.1.
 - Simplify VERSION declarations.

0.04 2019-02-18T05:55:48Z

 - Fix cpanfile for Test2::V0.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.03 2015-07-27

 - Updated docs to recommend that CHI be configured to throw exceptions instead
   of logging them.
 - Properly extend the BUILD method.

0.02 2015-07-21

 - Better Carp caller reporting.
 - Fix Type::Tiny union constraints sometimes failing on Perl < 5.14.
 - Fix several dependency issues.

0.01 2015-07-16

 - First version.
