@@ -45,7 +45,7 @@
             "CHI" : "0.58",
             "Moo" : "2.000000",
             "Scalar::Util" : "0",
-            "Starch" : "0.10",
+            "Starch" : "0.11",
             "Type::Tiny" : "1.000005",
             "namespace::clean" : "0.24",
             "perl" : "5.008001",
