@@ -149,8 +149,6 @@ Set L<Starch::Store/remove>.
 sub set {
     my ($self, $id, $namespace, $data, $expires) = @_;
 
-    local $Carp::Interal{ (__PACKAGE__) } = 1;
-
     $self->chi->set(
         $self->stringify_key( $id, $namespace ),
         $data,
@@ -163,8 +161,6 @@ sub set {
 sub get {
     my ($self, $id, $namespace) = @_;
 
-    local $Carp::Interal{ (__PACKAGE__) } = 1;
-
     return $self->chi->get(
         $self->stringify_key( $id, $namespace ),
     );
@@ -172,8 +168,6 @@ sub get {
 
 sub remove {
     my ($self, $id, $namespace) = @_;
-
-    local $Carp::Interal{ (__PACKAGE__) } = 1;
 
     $self->chi->remove(
         $self->stringify_key( $id, $namespace ),
